# MomentumSK

./: README.md  package-lock.json  package.json  tailwind.config.cjs
src/: app.html  app.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  temp.txt
src/lib/: blocklist.svelte  dashboard.svelte  timer.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/blockList/: +page.svelte
src/routes/timer/: +page.svelte
