[package]
name = "MomentumSK"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
rust-ini = "0.18"
tauri = { version = "1.2", features = ["devtools", "fs-all", "shell-open", "system-tray", "window-close", "window-create", "window-minimize", "window-set-decorations", "window-set-focus", "window-set-position", "window-set-size", "window-start-dragging", "window-unminimize"] }
serde = { version = "1.0.152",  features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.27.0"
winapi = { version = "0.3.9", features = ["tlhelp32"] }
directories = "4.0"
tauri-plugin-positioner = "1.0"
windows-win = "2.4.1"
tokio = { version = "1.25.0", features = ["rt", "time", "macros", "rt-multi-thread"] }
tokio-js-set-interval = "1.2.0"
async-recursion = "1.0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
